/*
 * Copyright 2020-2020 Exactpro (Exactpro Systems Limited)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.exactpro.th2.act.grpc.hand.rhactions";
option java_outer_classname = "RhWinActionsMessages";

import "google/protobuf/wrappers.proto";

package th2;

message WinLocator {
  string locator = 1;
  string matcher = 2;
}

message WinOpen {
    string workDir = 2;
    string appFile = 3;
}

message WinClick {
  enum Button {
    LEFT = 0;
    RIGHT = 1;
    MIDDLE = 2;
    DOUBLE = 3;
  }
  repeated WinLocator locators = 1;
  Button button = 2;
  google.protobuf.Int32Value xOffset = 3;
  google.protobuf.Int32Value yOffset = 4;
}

message WinSendText {
  repeated WinLocator locators = 1;
  string text = 2;
  bool clearBefore = 3;
}

message WinGetActiveWindow {
  string windowName = 2;
}

message WinGetElementAttribute {
  repeated WinLocator locators = 1;
  string attributeName = 2;
}

message WinWait {
  uint32 millis = 2;
}

message WinToggleCheckBox {
  repeated WinLocator locators = 1;
  string expectedState = 2;
}

message WinClickContextMenu {
  repeated WinLocator locators = 1;
}
